--- a/E.OVERHANG.HTML
+++ b/E.OVERHANG.HTML
@@ -52,7 +52,7 @@
 <table style="border-collapse: collapse; width: 100%; height: 200px;" border="1" data-ke-align="alignLeft">
 <tbody>
 <tr style="height: 25px;">
-<td style="width: 25%; height: 20px; text-align: center;font-size: 25px;", bgcolor="50BE96"><b>Increased height (MTR)</b></td>
+<td style="width: 25%; height: 20px; text-align: center;font-size: 25px;", bgcolor="2FB299"><b>Increased height (MTR)</b></td>
 
 </tr>
 <tr style="height: 25px;">
@@ -61,7 +61,7 @@
 </tr>
 </tr>
 <tr style="height: 25px;">
-<td style="width: 25%; height: 20px; text-align: center;font-size: 25px;", bgcolor="50BE96"><b>Calculated max height (MTR)</b></td>
+<td style="width: 25%; height: 20px; text-align: center;font-size: 25px;", bgcolor="2FB299"><b>Calculated max height (MTR)</b></td>
 
 </tr>
 </tr>
