--- a/MAKER/VOLVO CE.HTML
+++ b/MAKER/VOLVO CE.HTML
@@ -32,8 +32,8 @@
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO CE/EC210BF.HTML">EC210BF</option>
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO CE/EC210BLC.HTML">EC210BLC</option>
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO CE/EC210DL.HTML">EC210DL</option>
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO CE/EC220DL.HTML">EC220DL</option>
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO CE/EC220EL.HTML">EC220EL</option>
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO CE/EC220DL.html">EC220DL</option>
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO CE/EC220EL.html">EC220EL</option>
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO CE/EC240BLC.HTML">EC240BLC</option>
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO CE/EC250DL.HTML">EC250DL</option>
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO CE/EC250DLR.HTML">EC250DLR</option>
@@ -42,7 +42,7 @@
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO CE/EC300DL.HTML">EC300DL</option>
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO CE/EC300ELR.HTML">EC300ELR</option>
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO CE/EC330BLC.HTML">EC330BLC</option>
-          <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO CE/EC350DL.HTML">EC350DL</option>
+          <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO CE/EC350DL.html">EC350DL</option>
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO CE/EC380DL.HTML">EC380DL</option>
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO CE/EC380EL.HTML">EC380EL</option>
           <option value="https://AWEGG0416.GITHUB.IO/CARGO/VOLVO CE/EC480DL.HTML">EC480DL</option>
