--- a/VESSEL.HTML
+++ b/VESSEL.HTML
@@ -115,7 +115,8 @@
           <option value="https://AWEGG0416.GITHUB.IO/VESSEL/MORNING NINNI.HTML">MORNING NINNI</option> 
           <option value="https://AWEGG0416.GITHUB.IO/VESSEL/MORNING PILOT.HTML">MORNING PILOT</option> 
           <option value="https://AWEGG0416.GITHUB.IO/VESSEL/MORNING POST.HTML">MORNING POST</option>                    
-          <option value="https://AWEGG0416.GITHUB.IO/VESSEL/MORNING PRIDE.HTML">MORNING PRIDE</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/VESSEL/MORNING PRIDE.HTML">MORNING PRIDE</option>
+          <option value="https://AWEGG0416.GITHUB.IO/VESSEL/NABUCCO.HTML">NABUCCO</option> 
           <option value="https://AWEGG0416.GITHUB.IO/VESSEL/NOCC ATLANTIC.HTML">NOCC ATLANTIC</option> 
           <option value="https://AWEGG0416.GITHUB.IO/VESSEL/OBERON.HTML">OBERON</option>
           <option value="https://AWEGG0416.GITHUB.IO/VESSEL/OPAL LEADER.HTML">OPAL LEADER</option> 
