--- a/VESSEL/MORNING LUCY.HTML
+++ b/VESSEL/MORNING LUCY.HTML
@@ -206,7 +206,7 @@
 <td style="width: 20%; text-align: center; height: 17px;">STERN RAMP</td>
 <td style="width: 20%; text-align: center; height: 17px;">NO. 5</td>
 <td style="width: 20%; text-align: center; height: 17px;">39.7 * - * 7.0</td>
-<td style="width: 20%; text-align: center; height: 17px;">150</td>
+<td style="width: 20%; text-align: center; height: 17px;">150<br />55.0/4</td>
 </tr>
 <tr style="height: 17px;">
 <td style="width: 20%; text-align: center; height: 17px;">SIDE RAMP</td>
