--- a/test.html
+++ b/test.html
@@ -1,1 +1,329 @@
-test
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
+
+<title>untitled document</title>
+
+<!--<link rel="stylesheet" href="screen.css" media="screen">-->
+
+<style media="screen">
+
+body {
+    background-color: #f9f9f9;
+    font: 100% / 162% verdana, arial, helvetica, sans-serif;
+ }
+
+.hide {
+    display:none;
+ }
+
+</style>
+
+</head>
+<body> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.1/es6-promise.auto.js"></script>
+
+
+  <fieldset>
+    <legend>DK/HD Select: </legend>
+    <table>
+    <tr>
+    <td>
+  <fieldset>
+    <legend>1 DECK </legend>
+    <input type="checkbox" id="1-1" name="1-1">
+    <label for="1-1">1HD</label><br>
+    <input type="checkbox" id="1-2" name="1-2">
+    <label for="1-2">2HD</label><br>
+    <input type="checkbox" id="1-3" name="1-3">
+    <label for="1-3">3HD</label><br>
+    <input type="checkbox" id="1-4" name="1-4">
+    <label for="1-4">4HD</label><br>
+    <input type="checkbox" id="1-5" name="1-5">
+    <label for="1-5">5HD</label><br>
+  </fieldset>  
+  </td>
+  <td>
+    <fieldset>
+    <legend>2 DECK </legend>
+    <input type="checkbox" id="2-1" name="2-1">
+    <label for="2-1">1HD</label><br>
+    <input type="checkbox" id="2-2" name="2-2">
+    <label for="2-2">2HD</label><br>
+    <input type="checkbox" id="2-3" name="2-3">
+    <label for="2-3">3HD</label><br>
+    <input type="checkbox" id="2-4" name="2-4">
+    <label for="2-4">4HD</label><br>
+    <input type="checkbox" id="2-5" name="2-5">
+    <label for="2-5">5HD</label><br>    
+  </fieldset> 
+  </td>
+   <td>
+    <fieldset>
+    <legend>3 DECK </legend>
+    <input type="checkbox" id="3-1" name="3-1">
+    <label for="3-1">1HD</label><br>
+    <input type="checkbox" id="3-2" name="3-2">
+    <label for="3-2">2HD</label><br>
+    <input type="checkbox" id="3-3" name="3-3">
+    <label for="3-3">3HD</label><br>
+    <input type="checkbox" id="3-4" name="3-4">
+    <label for="3-4">4HD</label><br>
+    <input type="checkbox" id="3-5" name="3-5">
+    <label for="3-5">5HD</label><br>    
+  </fieldset> 
+  </td>
+    <td>
+    <fieldset>
+    <legend>4 DECK </legend>
+    <input type="checkbox" id="4-1" name="4-1">
+    <label for="4-1">1HD</label><br>
+    <input type="checkbox" id="4-2" name="4-2">
+    <label for="4-2">2HD</label><br>
+    <input type="checkbox" id="4-3" name="4-3">
+    <label for="4-3">3HD</label><br>
+    <input type="checkbox" id="4-4" name="4-4">
+    <label for="4-4">4HD</label><br>
+    <input type="checkbox" id="4-5" name="4-5">
+    <label for="4-5">5HD</label><br>    
+  </fieldset> 
+  </td>
+    <td>
+    <fieldset>
+    <legend>5 DECK </legend>
+    <input type="checkbox" id="5-1" name="5-1">
+    <label for="5-1">1HD</label><br>
+    <input type="checkbox" id="5-2" name="5-2">
+    <label for="5-2">2HD</label><br>
+    <input type="checkbox" id="5-3" name="5-3">
+    <label for="5-3">3HD</label><br>
+    <input type="checkbox" id="5-4" name="5-4">
+    <label for="5-4">4HD</label><br>
+    <input type="checkbox" id="5-5" name="5-5">
+    <label for="5-5">5HD</label><br>    
+  </fieldset> 
+  </td>
+    <td>
+    <fieldset>
+    <legend>6 DECK </legend>
+    <input type="checkbox" id="6-1" name="6-1">
+    <label for="6-1">1HD</label><br>
+    <input type="checkbox" id="6-2" name="6-2">
+    <label for="6-2">2HD</label><br>
+    <input type="checkbox" id="6-3" name="6-3">
+    <label for="6-3">3HD</label><br>
+    <input type="checkbox" id="6-4" name="6-4">
+    <label for="6-4">4HD</label><br>
+    <input type="checkbox" id="6-5" name="6-5">
+    <label for="6-5">5HD</label><br>    
+  </fieldset> 
+  </td>
+    <td>
+    <fieldset>
+    <legend>7 DECK </legend>
+    <input type="checkbox" id="7-1" name="7-1">
+    <label for="7-1">1HD</label><br>
+    <input type="checkbox" id="7-2" name="7-2">
+    <label for="7-2">2HD</label><br>
+    <input type="checkbox" id="7-3" name="7-3">
+    <label for="7-3">3HD</label><br>
+    <input type="checkbox" id="7-4" name="7-4">
+    <label for="7-4">4HD</label><br>
+    <input type="checkbox" id="7-5" name="7-5">
+    <label for="7-5">5HD</label><br>    
+  </fieldset> 
+  </td>
+    <td>
+    <fieldset>
+    <legend>8 DECK </legend>
+    <input type="checkbox" id="8-1" name="8-1">
+    <label for="8-1">1HD</label><br>
+    <input type="checkbox" id="8-2" name="8-2">
+    <label for="8-2">2HD</label><br>
+    <input type="checkbox" id="8-3" name="8-3">
+    <label for="8-3">3HD</label><br>
+    <input type="checkbox" id="8-4" name="8-4">
+    <label for="8-4">4HD</label><br>
+    <input type="checkbox" id="8-5" name="8-5">
+    <label for="8-5">5HD</label><br>    
+  </fieldset> 
+  </td>
+    <td>
+    <fieldset>
+    <legend>9 DECK </legend>
+    <input type="checkbox" id="9-1" name="9-1">
+    <label for="9-1">1HD</label><br>
+    <input type="checkbox" id="9-2" name="9-2">
+    <label for="9-2">2HD</label><br>
+    <input type="checkbox" id="9-3" name="9-3">
+    <label for="9-3">3HD</label><br>
+    <input type="checkbox" id="9-4" name="9-4">
+    <label for="9-4">4HD</label><br>
+    <input type="checkbox" id="9-5" name="9-5">
+    <label for="9-5">5HD</label><br>    
+  </fieldset> 
+  </td>
+    <td>
+    <fieldset>
+    <legend>10 DECK </legend>
+    <input type="checkbox" id="10-1" name="10-1">
+    <label for="10-1">1HD</label><br>
+    <input type="checkbox" id="10-2" name="10-2">
+    <label for="10-2">2HD</label><br>
+    <input type="checkbox" id="10-3" name="10-3">
+    <label for="10-3">3HD</label><br>
+    <input type="checkbox" id="10-4" name="10-4">
+    <label for="10-4">4HD</label><br>
+    <input type="checkbox" id="10-5" name="10-5">
+    <label for="10-5">5HD</label><br>    
+  </fieldset> 
+  </td>
+    <td>
+    <fieldset>
+    <legend>11 DECK </legend>
+    <input type="checkbox" id="11-1" name="11-1">
+    <label for="11-1">1HD</label><br>
+    <input type="checkbox" id="11-2" name="11-2">
+    <label for="11-2">2HD</label><br>
+    <input type="checkbox" id="11-3" name="11-3">
+    <label for="11-3">3HD</label><br>
+    <input type="checkbox" id="11-4" name="11-4">
+    <label for="11-4">4HD</label><br>
+    <input type="checkbox" id="11-5" name="11-5">
+    <label for="11-5">5HD</label><br>    
+  </fieldset> 
+  </td>
+    <td>
+    <fieldset>
+    <legend>12 DECK </legend>
+    <input type="checkbox" id="12-1" name="12-1">
+    <label for="12-1">1HD</label><br>
+    <input type="checkbox" id="12-2" name="12-2">
+    <label for="12-2">2HD</label><br>
+    <input type="checkbox" id="12-3" name="12-3">
+    <label for="12-3">3HD</label><br>
+    <input type="checkbox" id="12-4" name="12-4">
+    <label for="12-4">4HD</label><br>
+    <input type="checkbox" id="12-5" name="12-5">
+    <label for="12-5">5HD</label><br>    
+  </fieldset> 
+  </td>
+    <td>
+    <fieldset>
+    <legend>13 DECK </legend>
+    <input type="checkbox" id="13-1" name="13-1">
+    <label for="13-1">1HD</label><br>
+    <input type="checkbox" id="13-2" name="13-2">
+    <label for="13-2">2HD</label><br>
+    <input type="checkbox" id="13-3" name="13-3">
+    <label for="13-3">3HD</label><br>
+    <input type="checkbox" id="13-4" name="13-4">
+    <label for="13-4">4HD</label><br>
+    <input type="checkbox" id="13-5" name="13-5">
+    <label for="13-5">5HD</label><br>    
+  </fieldset> 
+  </td>
+  <td><button type="button" class="btnScreenShot" id="btnScreenShot">스크린샷</button>
+  
+  </td>
+  </tr></table>
+  </fieldset>
+ <table>
+<tr>
+
+<td>
+<div id="capture" style="position: relative; ">
+<img src="https://github.com/AWEGG0416/AWEGG0416.GITHUB.IO/blob/main/CARGO.jpg?raw=true"  >
+
+<div style=" position: absolute; left:0; top:0px;">
+    <label class="inpmtcc hide" id="1-1r">
+    <img src="https://github.com/AWEGG0416/AWEGG0416.GITHUB.IO/blob/main/READY.jpg?raw=true" alt="">
+    </label>
+</div>
+<div style=" position: absolute; left:0; top:0px;">
+    <label class="inpmtcc hide" id="1-2r">
+    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzA4MjZfNDQg%2FMDAxNjkyOTgyNTg4ODY5.paIEGSwKg1Zv72bSGgW-nZa_xW0-O8mHB0LH0ZJnDUEg.qkCPlFUWQBj1dGPh6uuR-eLw8HBSHjxNH6lns2OSeuUg.PNG.uou_xox_s2%2F%25C1%25A6%25B8%25F1_%25BE%25F8%25B4%25C2_%25BE%25C6%25C6%25AE%25BF%25F6%25C5%25A9_23.png&type=sc960_832" alt="">
+    </label>
+</div>
+
+</div>
+</td>
+
+</tr>
+</table>
+ 
+
+
+</form>
+
+<script>
+(function( aa ) {
+   'use strict';
+	var spmCC = aa.getElementById( '1-1' ),
+        ipmTCC = aa.getElementById( '1-1r' );
+
+        spmCC.addEventListener( 'input', 
+          function(){
+             if ( spmCC.checked ) {
+                  ipmTCC.classList.remove( 'hide' );
+              } 
+             else {
+                  ipmTCC.classList.add( 'hide' );
+      }
+     },false);
+}( document ));
+(function( ab ) {
+   'use strict';
+	var spmCC = ab.getElementById( '1-2' ),
+        ipmTCC = ab.getElementById( '1-2r' );
+
+        spmCC.addEventListener( 'input', 
+          function(){
+             if ( spmCC.checked ) {
+                  ipmTCC.classList.remove( 'hide' );
+              } 
+             else {
+                  ipmTCC.classList.add( 'hide' );
+         }
+     },false);
+}( document ));
+
+$("#btnScreenShot").on("click", function() {
+html2canvas(document.querySelector("#capture")).then(function(canvas) {
+if (canvas.msToBlob) { //for IE 10, 11
+var blob = canvas.msToBlob();
+window.navigator.msSaveBlob(blob, "capture.png");
+} else {
+saveAs(canvas.toDataURL(), "capture.png");
+}
+});
+function saveAs(uri, filename) {
+var link = document.createElement('a');
+if (typeof link.download === 'string') {
+link.href = uri;
+link.download = filename;
+
+//Firefox requires the link to be in the body
+
+document.body.appendChild(link);
+//simulate click
+link.click();
+//remove the link when done
+document.body.removeChild(link);
+} else {
+window.open(uri);
+}
+}
+﻿});
+</script>
+
+
+</body>
+</html>
