--- a/test.html
+++ b/test.html
@@ -240,11 +240,11 @@ body {
 
 <td>
 <div id="capture" style="position: relative; ">
-<img src="https://github.com/AWEGG0416/AWEGG0416.GITHUB.IO/blob/main/CARGO.jpg?raw=true"  >
+<img src="https://awegg0416.github.io/CARGO.jpg"  >
 
 <div style=" position: absolute; left:0; top:0px;">
     <label class="inpmtcc hide" id="1-1r">
-    <img src="https://github.com/AWEGG0416/AWEGG0416.GITHUB.IO/blob/main/READY.jpg?raw=true" alt="">
+    <img src="https://awegg0416.github.io/READY.jpg">
     </label>
 </div>
 <div style=" position: absolute; left:0; top:0px;">
