--- a/test.html
+++ b/test.html
@@ -249,7 +249,7 @@ body {
 </div>
 <div style=" position: absolute; left:0; top:0px;">
     <label class="inpmtcc hide" id="1-2r">
-    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzA4MjZfNDQg%2FMDAxNjkyOTgyNTg4ODY5.paIEGSwKg1Zv72bSGgW-nZa_xW0-O8mHB0LH0ZJnDUEg.qkCPlFUWQBj1dGPh6uuR-eLw8HBSHjxNH6lns2OSeuUg.PNG.uou_xox_s2%2F%25C1%25A6%25B8%25F1_%25BE%25F8%25B4%25C2_%25BE%25C6%25C6%25AE%25BF%25F6%25C5%25A9_23.png&type=sc960_832" alt="">
+    <img src="https://awegg0416.github.io/test.png" alt="">
     </label>
 </div>
 
