--- a/PYUNGTAEK.HTML
+++ b/PYUNGTAEK.HTML
@@ -30,7 +30,7 @@ HEIGHT:100%
 </table>  
   
  
-  <iframe id="myIframe" src="httpS://i.badatime.com/view_day.jsp?idx=149" frameborder="0" marginwidth="0" marginheight="0" width=445 height=100%></iframe>
+  <iframe id="myIframe" src="https://www.badatime.com/print.jsp?idx=149#" frameborder="0" marginwidth="0" marginheight="0" width=445 height=100%></iframe>
 
   
   
