--- a/cardshare.html
+++ b/cardshare.html
@@ -41,13 +41,13 @@
         templateArgs: {
           title: "{{ page.title }}",
           description: "{{ page.excerpt }}",
-          url : "{{ page.url }}",
+          url : "{{ https://awegg0416.github.io/card/c01.png }}",
         },
       });
     }
 </script>
 <a id="kakao-link-btn" href="javascript:sendLink()">
-    <img src="//developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png" />
+    <img src="https://awegg0416.github.io/card/c01.png" />
 </a>
   
     </body>
