--- a/cardshare.html
+++ b/cardshare.html
@@ -13,6 +13,16 @@
 
         }
     </script>
+  <style>
+  img {
+    width: 800px;
+    height: 800px;
+    object-fit: contain;
+
+  }
+
+</style>
+
 </head>
 <body>
     <form id="form1" method="post">
@@ -52,3 +62,4 @@
   
     </body>
 </html>
+
