--- a/cardshare_all.html
+++ b/cardshare_all.html
@@ -14,10 +14,10 @@
         templateArgs: {
           title: "{{ page.title }}",
           description: "{{ page.excerpt }}",
-          url : "{{https://awegg0416.github.io/card/c01.png}}"; ,
+          url : "{{https://awegg0416.github.io/card/b01.png}}"; ,
         },
       });
-    }
+    };
     function sendLink2() {
       Kakao.Link.sendCustom({
         templateId: 125739,   // 복사해둔 템플릿 ID
@@ -27,5 +27,6 @@
           url : "{{https://awegg0416.github.io/card/c01.png}}"; ,
         },
       });
-    }
+    };
+
 </script>
