--- a/cardshare_all.html
+++ b/cardshare_all.html
@@ -1,6 +1,6 @@
   <a id="kakao-link-btn" href="javascript:sendLink()">
     <img src="https://awegg0416.github.io/card/b01.png" width="100%" height="100%"/></a>
-  <a id="kakao-link-btn2" href="javascript:sendLink()">
+  <a id="kakao-link-btn" href="javascript:sendLink2()">
     <img src="https://awegg0416.github.io/card/c01.png" width="100%" height="100%"/></a>
 
 
@@ -30,3 +30,4 @@
     };
 
 </script>
+
