--- a/cardshare_all.html
+++ b/cardshare_all.html
@@ -1,7 +1,7 @@
   <a id="kakao-link-btn" href="javascript:sendLink()">
-    <img src="https://awegg0416.github.io/card/b01.png" width="100%" height="100%"/></a>
+    <img src="https://awegg0416.github.io/card/b01.png" width="100%"/></a>
   <a id="kakao-link-btn" href="javascript:sendLink2()">
-    <img src="https://awegg0416.github.io/card/c01.png" width="100%" height="100%"/></a>
+    <img src="https://awegg0416.github.io/card/c01.png" width="100%" /></a>
 
 
   <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
@@ -30,4 +30,5 @@
     };
 
 </script>
+
 
