--- a/cardshare.html
+++ b/cardshare.html
@@ -51,15 +51,26 @@
         templateArgs: {
           title: "{{ page.title }}",
           description: "{{ page.excerpt }}",
+          url : "{{ https://awegg0416.github.io/card/b01.png }}",
+        },
+      });
+    };
+   function sendLink2() {
+      Kakao.Link.sendCustom({
+        templateId: 125739,   // 복사해둔 템플릿 ID
+        templateArgs: {
+          title: "{{ page.title }}",
+          description: "{{ page.excerpt }}",
           url : "{{ https://awegg0416.github.io/card/c01.png }}",
         },
       });
-    }
+    };
 </script>
 <a id="kakao-link-btn" href="javascript:sendLink()">
-    <img src="https://awegg0416.github.io/card/c01.png" />
+    <img src="https://awegg0416.github.io/card/b01.png" />
 </a>
-  
+ <a id="kakao-link-btn" href="javascript:sendLink2()">
+    <img src="https://awegg0416.github.io/card/c01.png" />
+</a> 
     </body>
 </html>
-
