--- a/cardshare.html
+++ b/cardshare.html
@@ -13,56 +13,27 @@
 
         }
     </script>
-
-
 </head>
 <body>
+    <form id="form1" method="post">
+            <p style="text-align:center;">
+          <label STYLE= "font-size: 40px;"> 앗차사고 카드 공유기</label></P>
+        <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 100%; TEXT-ALIGN:CENTER"> 
+          <option value="선박선택">항목선택</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/cardshare_general.html">작업 일반</option> 
+          <option value="https://AWEGG0416.GITHUB.IOcardshare_fall.html">추락 위험</option>
+          <option value="https://AWEGG0416.GITHUB.IOcardshare_car.html">Car 작업</option>  
+          <option value="https://AWEGG0416.GITHUB.IOcardshare_h&h.htmlL">H&H 작업</option>
+          <option value="https://AWEGG0416.GITHUB.IOcardshare_bulk.html">BB 위험</option> 
+          <option value="https://AWEGG0416.GITHUB.IOcardshare_weather.html">기상 관련</option>
+          <option value="https://AWEGG0416.GITHUB.IO/cardshare_all.html">전체 보기</option>
+          <option value="https://poki.com/">======</option> 
+       </select>
+    </form>
+    <iframe id="myIframe" src="https://AWEGG0416.GITHUB.IO/READY.jpg" frameborder="0" marginwidth="0" marginheight="0" width=100% height=80%></iframe>
 
 
-  <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
-<script>
-    Kakao.init("fe5428503fe61ac79e396c5a11525d2d");   // 아까 복사해둔 JavaScript 키
-    function sendLink() {
-      Kakao.Link.sendCustom({
-        templateId: 125716,   // 복사해둔 템플릿 ID
-        templateArgs: {
-          title: "{{ page.title }}",
-          description: "{{ page.excerpt }}",
-          url : "{{ https://awegg0416.github.io/card/b01.png }}",
-        },
-      });
-    };
-   function sendLink2() {
-      Kakao.Link.sendCustom({
-        templateId: 125739,   // 복사해둔 템플릿 ID
-        templateArgs: {
-          title: "{{ page.title }}",
-          description: "{{ page.excerpt }}",
-          url : "{{ https://awegg0416.github.io/card/c01.png }}",
-        },
-      });
-    };
-     function sendLink3() {
-      Kakao.Link.sendCustom({
-        templateId: 125744,   // 복사해둔 템플릿 ID
-        templateArgs: {
-          title: "{{ page.title }}",
-          description: "{{ page.excerpt }}",
-          url : "{{ https://awegg0416.github.io/card/c02.png }}",
-        },
-      });
-    };
-</script>
-<a id="kakao-link-btn" href="javascript:sendLink()">
-    <img src="https://awegg0416.github.io/card/b01.png" width="100%" />
-</a>
-&nbsp
- <a id="kakao-link-btn" href="javascript:sendLink2()">
-    <img src="https://awegg0416.github.io/card/c01.png" width="100%" />
-</a> 
-  &nbsp
- <a id="kakao-link-btn" href="javascript:sendLink3()">
-    <img src="https://awegg0416.github.io/card/c02.png" width="100%" />
-</a> 
+
+  
     </body>
 </html>
