--- a/cardshare.html
+++ b/cardshare.html
@@ -21,11 +21,11 @@
         <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 100%; TEXT-ALIGN:CENTER"> 
           <option value="선박선택">항목선택</option> 
           <option value="https://AWEGG0416.GITHUB.IO/cardshare_general.html">작업 일반</option> 
-          <option value="https://AWEGG0416.GITHUB.IOcardshare_fall.html">추락 위험</option>
-          <option value="https://AWEGG0416.GITHUB.IOcardshare_car.html">Car 작업</option>  
-          <option value="https://AWEGG0416.GITHUB.IOcardshare_h&h.htmlL">H&H 작업</option>
-          <option value="https://AWEGG0416.GITHUB.IOcardshare_bulk.html">BB 위험</option> 
-          <option value="https://AWEGG0416.GITHUB.IOcardshare_weather.html">기상 관련</option>
+          <option value="https://AWEGG0416.GITHUB.IO/cardshare_fall.html">추락 위험</option>
+          <option value="https://AWEGG0416.GITHUB.IO/cardshare_car.html">Car 작업</option>  
+          <option value="https://AWEGG0416.GITHUB.IO/cardshare_h&h.htmlL">H&H 작업</option>
+          <option value="https://AWEGG0416.GITHUB.IO/cardshare_bulk.html">BB 위험</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/cardshare_weather.html">기상 관련</option>
           <option value="https://AWEGG0416.GITHUB.IO/cardshare_all.html">전체 보기</option>
           <option value="https://poki.com/">======</option> 
        </select>
@@ -37,4 +37,5 @@
   
     </body>
 </html>
+
 
