Update Kakao SDK script and link functionality

--- a/passage/passage-kwangyang.html
+++ b/passage/passage-kwangyang.html
@@ -7,7 +7,7 @@
         templateArgs: {
           title: "{{ page.title }}",
           description: "{{ page.excerpt }}",
-          url : "{{ https://awegg0416.github.io/card/g01.png }}",
+          url : "{{ https://awegg0416.github.io/passage/passage-kwangyang.html }}",
         },
       });
     };
