--- a/passage/passage-kwangyang.html
+++ b/passage/passage-kwangyang.html
@@ -48,7 +48,8 @@
 <p data-ke-size="size16"><b><span style="color: #000000;">저녁 식사시간<span>(18:30~19:00) </span></span></b><b></b></p>
 <p data-ke-size="size16"><b><span style="color: #000000;">하역 작업 종료이후<span> (21:00~22:00)</span></span></b><b></b></p>
 &nbsp;
-<img src = "https://AWEGG0416.GITHUB.IO/img/passage-kwangyang.PNG" width="100%>
+<img src = "https://AWEGG0416.GITHUB.IO/img/passage-kwangyang.PNG" width="100%">
 <script>
   self.resizeTo(document.body.scrollWidth, document.body.scrollHeight + 10);
 </script>
+
