--- a/passage.html
+++ b/passage.html
@@ -32,10 +32,11 @@
       </select>
     </form>
  
-    <iframe id="myIframe" src="https://AWEGG0416.GITHUB.IO/img/passage-pyungtaek_1.png" frameborder="0" frameborder="0" 
+    <iframe id="myIframe" src="https://AWEGG0416.GITHUB.IO/img/caution.html" frameborder="0" frameborder="0" 
       
     marginwidth="0" marginheight="0" width=100% height=83%></iframe>
   
     </body>
 </body>
+
 </html>
