Add header and restore table in helmet.html

--- a/img/helmet.html
+++ b/img/helmet.html
@@ -1,4 +1,4 @@
-
+<h1 style="text-align: center;" data-ke-size="size30"><span style="color: #ee2323; background-color: #c0d1e7; font-family: 'Noto Sans Demilight', 'Noto Sans KR';"><b>&nbsp;전달 할 앗차사고 카드를 누르세요!&nbsp;</b></span></h2>
 
 <table style="border-collapse: collapse; width: 100%; height: 238px;" border="1" data-ke-align="alignLeft" data-ke-style="style13">
 <tbody>
