--- a/cardshare.html
+++ b/cardshare.html
@@ -24,7 +24,7 @@
           <option value="https://AWEGG0416.GITHUB.IO/cardshare_fall.html">추락 위험</option>
           <option value="https://AWEGG0416.GITHUB.IO/cardshare_car.html">Car 작업</option>  
           <option value="https://AWEGG0416.GITHUB.IO/cardshare_h&h.html">H&H 작업</option>
-          <option value="https://AWEGG0416.GITHUB.IO/cardshare_bulk.html">BB 위험</option> 
+          <option value="https://AWEGG0416.GITHUB.IO/cardshare_bulk.html">BB 작업</option> 
           <option value="https://AWEGG0416.GITHUB.IO/cardshare_weather.html">기상 관련</option>
           <option value="https://AWEGG0416.GITHUB.IO/cardshare_all.html">전체 보기</option>
           <option value="https://poki.com/">======</option> 
@@ -37,6 +37,7 @@
   
     </body>
 </html>
+
 
 
 
