--- a/ETC.HTML
+++ b/ETC.HTML
@@ -19,8 +19,10 @@
             <p style="text-align:center;">
           <label STYLE= "font-size: 40px;"> SELECT SUBJECT</label></P>
         <select id="location" onchange="setIframeSource()" STYLE= "font-size: 40px; width: 100%; TEXT-ALIGN:CENTER"> 
-          <option value="선박선택">항목선택</option> 
-          <option value="https://AWEGG0416.GITHUB.IO/E.PILOT.HTML">도선예보</option> 
+          <option value="선박선택">항목선택</option>
+          <option value="https://AWEGG0416.GITHUB.IO/E.PILOT.HTML">도선예보</option>
+          <option value="https://AWEGG0416.GITHUB.IO/cardshare.html">앗차사고 카드 공유</option>
+          <option value="https://AWEGG0416.GITHUB.IO/passage.html">출입자 지침</option>
           <option value="https://AWEGG0416.GITHUB.IO/E.ETA.HTML">ETA 계산기</option>
           <option value="https://www.komdi.or.kr/ukiwi/biz/info/ukiwiBizInfoIMDGCodeList.do">IMDG 정보</option>  
           <option value="https://AWEGG0416.GITHUB.IO/E.OVERHANG.HTML">OVERHANG 계산기</option>
