--- a/passage/passage-Incheon.html
+++ b/passage/passage-Incheon.html
@@ -51,7 +51,7 @@
 <p style="background-color: #ffffff; text-align: justify;" data-ke-size="size16"><span style="color: #ff0000;">-.&nbsp;</span><span style="color: #ff0000;">선용품공급 및 기타 물품공급은 하역작업이 끝난 시점이나<span>,&nbsp;</span>식사 시간을 이용해 공급할 것<span>.</span></span></p>
 <p style="background-color: #ffffff; text-align: justify;" data-ke-size="size16"><span style="color: #ff0000;">-.&nbsp;</span><span style="color: #ff0000;">선적 작업시에 크레인 주변에서 멀어질 것<span>.</span></span></p>
 <p style="background-color: #ffffff; text-align: justify;" data-ke-size="size16">&nbsp;</p>
-<p style="background-color: #ffffff; text-align: justify;" data-ke-size="size16"><span style="color: #242424;">문의사항이 있으시면<span>,&nbsp;</span>아래 연락처로 부담 없이 연락 주시 길 바랍니다<span>.</span></span></p>
+<p style="background-color: #ffffff; text-align: justify;" data-ke-size="size16"><span style="color: #242424;">문의사항이 있으시면<span>,&nbsp;</span>아래 연락처로 연락 주시 길 바랍니다<span>.</span></span></p>
 <p style="background-color: #ffffff; text-align: justify;" data-ke-size="size16">&nbsp;</p>
 <p data-ke-size="size16"><span style="color: #000000;">Min-Seop.Jeong</span></p>
 <p data-ke-size="size16"><span style="color: #000000;">Operator/Port Services</span></p>
@@ -60,4 +60,5 @@
 <p data-ke-size="size16"><span>Email: <a href="mailto:Minseop.Jeong@wilhelmsen.com">Minseop.Jeong@wilhelmsen.com</a></span></p>
 <script>
   self.resizeTo(document.body.scrollWidth, document.body.scrollHeight + 10);
+
 </script>
