--- a/store.html
+++ b/store.html
@@ -28,7 +28,7 @@
       </select>
     </form>
  
-    <iframe id="myIframe" src="https://github.com/AWEGG0416/AWEGG0416.GITHUB.IO/img/helmet.png" frameborder="0" frameborder="0" 
+    <iframe id="myIframe" src="https://AWEGG0416.GITHUB.IO/img/helmet.png" frameborder="0" frameborder="0" 
       
     marginwidth="0" marginheight="0" width=100% height=83%></iframe>
   
@@ -36,4 +36,5 @@
 </body>
 
 </html>
+
 
