--- a/store.html
+++ b/store.html
@@ -22,7 +22,7 @@
          <option value="">SELECT SUBJECT</option>  
           <option value="https://AWEGG0416.GITHUB.IO/contact.html">비상연락망</option>
           <option value="https://awegg0416.github.io/blindspot.html">화물별 BLIND SPOT</option>
-          <option value="https://AWEGG0416.GITHUB.IO/instruction/Instruction_tally.html">준비중</option> 
+          <option value="">준비중</option> 
 
 
       </select>
@@ -36,5 +36,6 @@
 </body>
 
 </html>
+
 
 
