--- a/ETC.HTML
+++ b/ETC.HTML
@@ -22,6 +22,8 @@
           <option value="선박선택">항목선택</option>
           <option value="https://AWEGG0416.GITHUB.IO/E.PILOT.HTML">도선예보</option>
           <option value="https://AWEGG0416.GITHUB.IO/cardshare.html">앗차사고 카드 공유</option>
+          <option value="https://awegg0416.github.io/blindspot.html">화물별 Blind sector</option>
+          <option value="https://awegg0416.github.io/instruction.html">작업자 안전지침</option>
           <option value="https://AWEGG0416.GITHUB.IO/passage.html">출입자 지침</option>
           <option value="https://AWEGG0416.GITHUB.IO/E.ETA.HTML">ETA 계산기</option>
           <option value="https://www.komdi.or.kr/ukiwi/biz/info/ukiwiBizInfoIMDGCodeList.do">IMDG 정보</option>  
