--- a/instruction/Instruction_driver2.html
+++ b/instruction/Instruction_driver2.html
@@ -19,10 +19,21 @@
 
 <li><span style="background-color: #f3c000;"><b>작업 안전 수칙</b></span></li>
 </ul>
-<p data-ke-size="size16">-&nbsp; 안전보호장구(안전모, 안전조끼, 안전화) 착용<br />-&nbsp; 지정된 운전자(면허 소지자)외 운전 금지</span><br /><span style="color: #333333; text-align: start;">-<span>&nbsp;</span></span><span style="color: #333333; text-align: start;"><span>&nbsp;</span>작업 전 몸 상태(음주여부 포함) 사전 확인 후 이상 유무 보고</span> <br /><span style="color: #333333; text-align: start;">-<span>&nbsp;</span></span><span style="color: #000000; text-align: start;"><span>&nbsp;</span>작업&nbsp;장소의&nbsp;사전&nbsp;답사&nbsp;및&nbsp;정보&nbsp;파악(높이&nbsp;및&nbsp;이동&nbsp;반경)</span><br />-&nbsp; 조작 전 화물 기본 점검 실시(타이어, 누유, 도어 상태 이상 유무)<br /><span style="color: #333333; text-align: start;">-<span>&nbsp;</span></span><span style="color: #000000; text-align: start;"><span>&nbsp;</span>조작 시 안전벨트 착용</span><br />-&nbsp; 조작 시 모든 개폐구(운전석 문, 베터리 문 등) 모두 닫은 후 조작</span><br />-&nbsp;  추월 금지&nbsp;
+<p data-ke-size="size16">-&nbsp; 안전보호장구(안전모, 안전조끼, 안전화) 착용<br />-&nbsp; 지정된 운전자(면허 소지자)외 운전 금지</span><br /><span style="color: #333333; text-align: start;">
+  -<span>&nbsp;</span></span><span style="color: #333333; text-align: start;"><span>&nbsp;</span>작업 전 몸 상태(음주여부 포함) 사전 확인 후 이상 유무 보고</span> 
+<br /><span style="color: #333333; text-align: start;">-<span>&nbsp;</span></span><span style="color: #000000; text-align: start;"><span>&nbsp;</span>작업&nbsp;
+  장소의&nbsp;사전&nbsp;답사&nbsp;및&nbsp;정보&nbsp;파악(높이&nbsp;및&nbsp;이동&nbsp;반경)</span><br />-&nbsp; 
+조작 전 화물 기본 점검 실시(타이어, 누유, 도어 상태 이상 유무)<br />
+-&nbsp;&nbsp;대형 화물 승하차시 양손을 사용하여 안전 확보
+    </span><br />
+  
+  -<span>&nbsp;</span></span><span style="color: #000000; text-align: start;">
+  <span>&nbsp;</span>조작 시 안전벨트 착용</span><br />-&nbsp; 조작 시 모든 개폐구(운전석 문, 베터리 문 등) 모두 닫은 후 조작</span><br />-&nbsp;  추월 금지&nbsp;
 <br />-&nbsp;    조작 후 주차기어(P) 체결 후 하차&nbsp;<br /><span style="color: #333333; text-align: start;">-<span>&nbsp;</span></span> 위험요인 발견시 즉시 관리 감독자에게 보고 할 것</p>
+
 <p data-ke-size="size16">&nbsp;</p>
 <ul style="list-style-type: disc; color: #000000; text-align: start;" data-ke-list-type="disc">
 <li><span style="background-color: #f3c000;"><b>맹목구간(Blind spot)</b></span></li></p>
 <img src="https://github.com/AWEGG0416/AWEGG0416.GITHUB.IO/blob/main/img/blindspot/excavator.jpg?raw=true" width="100%"></p>
+
 <a href=" https://awegg0416.github.io/blindspot.html"><img src="https://github.com/AWEGG0416/AWEGG0416.GITHUB.IO/blob/main/img/blind.png?raw=true" width="100%"></a></p></p>
